# DGestdesktop

./: .gitignore  CMakeLists.txt  Messages.sh  com.dervox.dim.appdata.xml  com.dervox.dim.desktop  config.h.in  dim.po  dim.pot  extract-messages.sh
Craft Blueprint/: dim.py
Craft Blueprint/asd/: dim-bak.py
android/: AndroidManifest.xml
po/: dim.pot
po/fr/: dim.po
src/: CMakeLists.txt  colorschememanager.cpp  colorschememanager.h  main.cpp  printer.cpp  printer.h  printerhelper.cpp  printerhelper.h  resources.qrc  traymanager.cpp  traymanager.h
src/api/: abstractapi.cpp  abstractapi.h  activitylogapi.cpp  activitylogapi.h  cashsourceapi.cpp  cashsourceapi.h  cashtransactionapi.cpp  cashtransactionapi.h  clientapi.cpp  clientapi.h  dashboardanalyticsapi.cpp  dashboardanalyticsapi.h  dgestapi.cpp  dgestapi.h  invoiceapi.cpp  invoiceapi.h  productapi.cpp  productapi.h  purchaseapi.cpp  purchaseapi.h  saleapi.cpp  saleapi.h  subscriptionapi.cpp  subscriptionapi.h  supplierapi.cpp  supplierapi.h  teamapi.cpp  teamapi.h  userapi.cpp  userapi.h
src/contents/ui/: Main.qml
src/contents/ui/components/: DBusyIndicator.qml  DFormTextFieldDelegate.qml  DKTableView.qml  DKTableViewAbstract.qml  DNotification.qml  DSearchableComboBox.qml  DSearchableComboBoxCashSource.qml  DSearchableComboBoxClient.qml  DStatusBadge.qml  NumPad.qml  PaginationBar.qml  SkeletonLoaders.qml  TableHeaderLabel.qml  VNavigationTabBar.qml
src/contents/ui/pages/: AboutApp.qml  ApiStatusHandler.qml  ExpiredSubscription.qml  MainAndroid.qml  NoPage.qml  Settings.qml  Welcome.qml
src/contents/ui/pages/activitylog/: ActivityLog.qml
src/contents/ui/pages/cashTransaction/: CashTransaction.qml  CashTransactionDetails.qml
src/contents/ui/pages/cashsource/: CashSource.qml  CashSourceDetails.qml  TransactionDialog.qml  TransferDialog.qml
src/contents/ui/pages/client/: Client.qml  ClientDetails.qml  ClientPaymentsDialog.qml  ClientSalesDialog.qml  ClientStatisticsDialog.qml
src/contents/ui/pages/dashboard/: Dashboard.qml  DateRangeSelector.qml  LineChartCard.qml  PieChartCard.qml  StatsCard.qml  TopItemsCard.qml
src/contents/ui/pages/invoice/: AddPaymentDialog.qml  Invoice.qml  InvoiceDetails.qml  InvoiceDetails_Draft.qml  InvoiceItemDialog.qml  InvoiceSummaryCard.qml  ViewPdfDialog.qml
src/contents/ui/pages/product/: Barcode.qml  BarcodeDialog.qml  BarcodePrint.qml  CategoriesSettings.qml  ImageBannerCard.qml  ImageFileDialog.qml  ProductDetails.qml  ProductImageEditor.qml  Products.qml
src/contents/ui/pages/purchase/: ProductSelectorDialog.qml  ProductSelectorDialog.qml.bak  Purchase.qml  PurchaseDetails.qml
src/contents/ui/pages/quickSalePage/: CashSourceSettings.qml  FavoriteProductsSettings.qml  QuickSalePage.qml  QuickSaleTabContent.qml  SharedFavoritesGrid.qml
src/contents/ui/pages/quote/: ProductSelectorDialog.qml  Quote.qml  QuoteDetails.qml  QuoteGenerationDialog.qml
src/contents/ui/pages/sale/: ProductSelectorDialog.qml  ReceiptPDFViewer.qml  ReceiptPrintDialog.qml  Sale.qml  SaleDetails.qml
src/contents/ui/pages/settings/: AboutSettingsPage.qml  AccountsSettingsPage.qml  ConfigPage.qml  DocumentPreview.qml  DocumentSettingsPage.qml  GeneralSettingsPage.qml  LanguageAndLocalization.qml  ReceiptSettingsPage.qml  TeamSettingsPage.qml
src/contents/ui/pages/supplier/: Supplier.qml  SupplierDetails.qml
src/contents/ui/pages/team/: TeamDialog.qml  TeamImageBannerCard.qml  TeamImageEditor.qml
src/contents/ui/pages/user/: Login.qml  Profile.qml  Signup.qml
src/contents/ui/updater/: AutoUpdateCheck.qml  UpdateMenuAction.qml  UpdateProgressDialog.qml  UpdaterDialog.qml
src/model/: activitylogmodel.cpp  activitylogmodel.h  barcodemodel.cpp  barcodemodel.h  cashsourcemodel.cpp  cashsourcemodel.h  cashsourcemodelfetch.cpp  cashsourcemodelfetch.h  cashsourceproxymodel.cpp  cashsourceproxymodel.h  cashtransactionmodel.cpp  cashtransactionmodel.h  clientmodel.cpp  clientmodel.h  clientmodelfetch.cpp  clientmodelfetch.h  dashboardmodel.cpp  dashboardmodel.h  invoicemodel.cpp  invoicemodel.h  productmodel.cpp  productmodel.h  productmodelFetch.cpp  productmodelFetch.h  productunitmodel.cpp  productunitmodel.h  purchasemodel.cpp  purchasemodel.h  quotemodel.cpp  quotemodel.h  salemodel.cpp  salemodel.h  suppliermodel.cpp  suppliermodel.h
src/qml/: Main.qml
src/qml/com/foxmoxie/Printer/: qmldir
src/qml/components/: DNotification.qml  VNavigationTabBar.qml
src/qml/pages/: AboutApp.qml  Login.qml  Login.qml.PToanj  Settings.qml  Signup.qml  Welcome.qml
src/updater/: AppUpdater.cpp  AppUpdater.h  KUpdater.cpp  KUpdater.h  UpdateHelper.cpp  UpdateHelper.h
src/utils/: PDFView.qml  appsettings.cpp  appsettings.h  documentconfigmanager.cpp  documentconfigmanager.h  favoritemanager.cpp  favoritemanager.h  pageImageProvider.cpp  pdfModel.cpp  pdfModel.h
